--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,3 +32,10 @@ body, html{
     background: red;
     position: absolute;
 } 
+
+.counter{
+    position: absolute;
+    z-index: 3;
+    left: 2vw;
+    height: 2vh;
+}
