--- a/scss/style.css
+++ b/scss/style.css
@@ -28,14 +28,14 @@ body, html {
   position: relative;
   background-image: url("../img/platform.png");
   background-repeat: repeat-x;
-  background-size: 15vh;
+  background-size: 7vw 30vh;
 }
 
 .player {
   position: absolute;
   background-image: url("../img/player.png");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 
 .blockage {
@@ -43,7 +43,7 @@ body, html {
   position: absolute;
   background-image: url("../img/blockage.png");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 
 .counter {
