--- a/scss/style.css
+++ b/scss/style.css
@@ -9,6 +9,7 @@ body, html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-family: 'Silkscreen', cursive;
 }
 
 .field {
@@ -18,22 +19,22 @@ body, html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-image: url("../img/background.png");
+  background-image: url("../img/background.jpg");
   background-repeat: repeat-x;
-  background-size: 140vh;
+  background-size: 50% 70%;
 }
 
 .platform {
   z-index: 1;
   position: relative;
-  background-image: url("../img/platform.png");
-  background-repeat: repeat-x;
-  background-size: 7vw 30vh;
+  background-image: url("../img/platform.jpg");
+  background-repeat: repeat;
+  background-size: 6vw 10vh;
 }
 
 .player {
   position: absolute;
-  background-image: url("../img/player.png");
+  background-image: url("../img/player.gif");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -41,7 +42,7 @@ body, html {
 .blockage {
   z-index: 1;
   position: absolute;
-  background-image: url("../img/blockage.png");
+  background-image: url("../img/blockage.gif");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -49,7 +50,13 @@ body, html {
 .counter {
   position: absolute;
   z-index: 3;
-  left: 2vw;
-  height: 2vh;
+  font-size: 2.5vw;
+  color: yellow;
+  min-width: 10vw;
+  height: 15vh;
+}
+
+.counter span {
+  font-size: 2vw;
 }
 /*# sourceMappingURL=style.css.map */
