--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ body, html{
     display: flex;
     background-image: url('../img/background.jpg');
     background-repeat: repeat-x;
-    background-size: 50% 70%;
+    background-size: 50vw 70vh;
 }
 
 .platform{
